tests/type-errors/shadow_field_errors_1.arl
archetype shadow_field_errors_1

asset myasset {
  id: string;
} shadow {
  s: int; (* must be initialized *)
} with {
  a1: s >= 0;
}

entry main (k : pkey of myasset) {
  effect {
    myasset.add({id = k; s = 1}); (* cannot assign shadow field in execution instruction *)
  }
}
